[add] ipfs and more docs

--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.1.0",
     "@truffle/hdwallet-provider": "^1.2.3",
+    "truffle-default-builder": "^2.0.0",
     "dotenv": "^10.0.0",
     "fs": "^0.0.1-security",
-    "gulp-sass": "^5.0.0"
+    "gulp-sass": "^5.0.0",
+    "ipfs-core": "^0.8.0"
   }
 }
